src/renderer/styles/App.scss
@import './color';
@import './spacing';

body {
  position: relative;
  color: white;
  height: 100vh;
  background: $primary-dark;
  font-family: sans-serif;
  font-size: 1em;
  overflow-y: hidden;
  display: flex;
  justify-content: center;
  align-items: center;

  #root {
    height: 100%;
    width: 100%;
  }
}

.row {
  display: flex;
  flex-direction: row;
}

.col {
  display: flex;
  flex-direction: column;
}

.full {
  height: 100%;
  width: 100%;
}

.center {
  align-content: center;
  align-items: center;
  justify-content: center;
  text-align: center;
}

/* width */
::-webkit-scrollbar {
  width: 4px;
}

/* Track */
::-webkit-scrollbar-track {
  border-radius: 8px;
  background: $primary-lighter;
}

/* Handle */
::-webkit-scrollbar-thumb {
  border-radius: 8px;
  background: $primary-light;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: $primary-default;
}

